[gd_scene load_steps=8 format=2]

[ext_resource path="res://Reboot/reboot_frame.png" type="Texture" id=1]
[ext_resource path="res://Reboot/Reboot.gd" type="Script" id=2]
[ext_resource path="res://Fonts/soviet_font_12.tres" type="DynamicFont" id=3]
[ext_resource path="res://Fonts/soviet_computer.tres" type="DynamicFont" id=4]
[ext_resource path="res://Reboot/yes_sprite-Sheet.png" type="Texture" id=5]
[ext_resource path="res://Reboot/no_sprite-Sheet.png" type="Texture" id=6]
[ext_resource path="res://Sounds/sounds.tscn" type="PackedScene" id=7]

[node name="Reboot" type="Node2D"]
script = ExtResource( 2 )

[node name="reboot_frame" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="ui" type="Control" parent="."]
margin_right = 96.0
margin_bottom = 120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="monitor_text" type="Label" parent="ui"]
margin_left = 12.0
margin_top = 10.0
margin_right = 84.0
margin_bottom = 96.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.6, 0.898039, 0.313726, 1 )
autowrap = true

[node name="load_text" type="RichTextLabel" parent="ui"]
margin_left = 8.0
margin_top = 84.0
margin_right = 88.0
margin_bottom = 96.0
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]- - - - - - - - - - - - - - - - - - -[/center]"
visible_characters = 0
percent_visible = 0.01
text = "- - - - - - - - - - - - - - - - - - -"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="yes_key" type="Label" parent="ui"]
margin_left = 20.0
margin_top = 101.0
margin_right = 32.0
margin_bottom = 115.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.984314, 0.615686, 0.156863, 1 )
text = "A"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="no_key" type="Label" parent="ui"]
margin_left = 62.0
margin_top = 101.0
margin_right = 75.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.984314, 0.615686, 0.156863, 1 )
text = "B"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="yes_button" type="Sprite" parent="ui"]
position = Vector2( 30, 102 )
texture = ExtResource( 5 )
centered = false
hframes = 2

[node name="no_button" type="Sprite" parent="ui"]
position = Vector2( 51, 102 )
texture = ExtResource( 6 )
centered = false
hframes = 2

[node name="sounds" parent="." instance=ExtResource( 7 )]
position = Vector2( 56, 102 )

[node name="load_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="alert_timer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true
[connection signal="timeout" from="load_timer" to="." method="_on_load_timer_timeout"]
[connection signal="timeout" from="alert_timer" to="." method="_on_alert_timer_timeout"]
